added table of contents

--- a/jupyter_notebook/notebook.ipynb
+++ b/jupyter_notebook/notebook.ipynb
@@ -5,7 +5,137 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Classify Images of Cancer\n"
+    "---\n",
+    "# <div align=\"center\"><font color='pink'> COSC 2673/2793 | Machine Learning</font></div>\n",
+    "## <div align=\"center\"> <font size=50 color='pink'>Classify Images of Cancer</font></div>\n",
+    "---\n",
+    "\n",
+    "# Acknowledgments:\n",
+    "\n",
+    "Thank the Machine Learning course Sem 1 2023 instructors at RMIT University for providing me with valuable knowledge, guidance, and support throughout this report. The course lectures, slides, code examples, and tutorials have been instrumental in developing my understanding of various machine-learning concepts and techniques. \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "<a id=\"0\"></a>\n",
+    "# TABLE OF CONTENTS\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "### 1. [Import](#1)\n",
+    "\n",
+    "\n",
+    "<br>\n",
+    "<br>\n",
+    "\n",
+    "\n",
+    "### 2. [Data Overview](#2)\n",
+    "\n",
+    "<br>\n",
+    "<br>\n",
+    "\n",
+    "### 3. [Data Exploratory Analysis](#3)\n",
+    "\n",
+    "<br>\n",
+    "<br>\n",
+    "\n",
+    "### 4. [Data Preprocessing](#3)\n",
+    "+ Preprocess the images and their labels according to the provided CSV files (mainData.csv and extraData.csv).\n",
+    "+ Perform data augmentation if necessary.\n",
+    "\n",
+    "\n",
+    "<br>\n",
+    "<br>\n",
+    "\n",
+    "### 4. [Train Test Split](#4)\n",
+    "\n",
+    "<br>\n",
+    "<br>\n",
+    "\n",
+    "### 5. [Data Normalization - Feature Scaling](#5)\n",
+    "\n",
+    "\n",
+    "<br>\n",
+    "<br>\n",
+    "\n",
+    "### 6. [Regression Evaluation Framework](#6)\n",
+    "\n",
+    "\n",
+    "Use appropriate evaluation metrics considering class imbalance, such as precision, recall, F1-score, or the area under the Receiver Operating Characteristic (ROC) curve.\n",
+    "Perform analysis and comparison between classifying the two categories.\n",
+    "\n",
+    "\n",
+    "<br>\n",
+    "<br>\n",
+    "\n",
+    "### 7. [Baseline model](#7)\n",
+    "\n",
+    "<br>\n",
+    "<br>\n",
+    "\n",
+    "### 8. [Extended Models - Part 1](#8)\n",
+    "\n",
+    "+ Perform hyperparameter tuning to refine the models.\n",
+    "+ Consider using class weights during model training to account for the imbalance in the dataset.\n",
+    "\n",
+    "8.3 [Best Model](#8.3)\n",
+    "\n",
+    "<br>\n",
+    "<br>\n",
+    "\n",
+    "### 9. [Extra Model - Part 2 - (k-fold for hyperparameter tuning)](#9)\n",
+    "\n",
+    "<br>\n",
+    "<br>\n",
+    "\n",
+    "\n",
+    "### 10. [Further Data Preprocessing](#10)\n",
+    "\n",
+    "\n",
+    "<br>\n",
+    "<br>\n",
+    "\n",
+    "### 11. [Extended Model - Part 3 (Use Data after Preprocessing)](#11)\n",
+    "\n",
+    "<br>\n",
+    "<br>\n",
+    "\n",
+    "### 11. [Ultimate judgment](#11)\n",
+    "Determine the criteria by which we evaluate your models and decide what it means to be \"the best model.\"\n",
+    "Make an ultimate judgment of the best model for each task, considering performance metrics and other factors such as interpretability, robustness, and computational efficiency.\n",
+    "\n",
+    "<br>\n",
+    "<br>\n",
+    "\n",
+    "### 11. [Independent evaluation](#11)\n",
+    "Research published works using the same or similar datasets.\n",
+    "Compare and contrast our results with those works.\n",
+    "\n",
+    "<br>\n",
+    "<br>\n",
+    "\n",
+    "### 12. [Discussion](#12)\n",
+    "\n",
+    "<br>\n",
+    "<br>\n",
+    "\n",
+    "### 13. [Summary](#13)\n",
+    "\n",
+    "<br>\n",
+    "<br>\n",
+    "\n",
+    "### 14. [Extra References](#14)\n",
+    "\n",
+    "<hr>\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id=\"1\"></a>\n",
+    "# 1. Import "
    ]
   },
   {
@@ -94,6 +224,15 @@
     "random.seed(SEED)\n",
     "np.random.seed(SEED)\n",
     "tf.random.set_seed(SEED)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id=\"2\"></a>\n",
+    "# 2. Data Overview"
    ]
   },
   {
@@ -291,18 +430,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "The main data DataFrame has 9896 rows and 7 columns\n",
-      "The extra data DataFrame has 10384 rows and 5 columns\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -380,7 +510,7 @@
        "2  ../Image_classification_data/patch_images/2240...  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,6 +537,16 @@
     "\n",
     "# the first 3 rows of the main data DataFrame\n",
     "main_data.head(3)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id=\"3\"></a>\n",
+    "\n",
+    "# 3. Exploratory Data Analysis (EDA)"
    ]
   },
   {
