added hyperparameter tuning

--- a/jupyter_notebook/notebook.ipynb
+++ b/jupyter_notebook/notebook.ipynb
@@ -218,6 +218,8 @@
     "from tensorflow.keras.optimizers import Adam\n",
     "from sklearn.metrics import precision_recall_fscore_support, classification_report, confusion_matrix, roc_auc_score\n",
     "from sklearn.preprocessing import LabelBinarizer\n",
+    "from keras_tuner import RandomSearch\n",
+    "\n",
     "\n",
     "# Modelling\n",
     "import tensorflow as tf\n",
@@ -2340,111 +2342,171 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Hyperparameter tuning"
+    "# Hyperparameter tuning\n",
+    "\n",
+    "+ Hyperparameter tuning is an important step in improving the model's performance. We can use different techniques such as Grid Search, Random Search, or Bayesian Optimization. We will use Keras Tuner, a library that helps us pick the optimal set of hyperparameters for the TensorFlow program.\n",
+    "\n",
+    "+ We tune the number of units in the first Conv2D layer and the learning rate of the optimizer. Other hyperparameters, such as the dropout rate, number of layers, number of neurons in the dense layer, etc., can also be tuned similarly."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Search: Running Trial #1\n",
+      "\n",
+      "Value             |Best Value So Far |Hyperparameter\n",
+      "64                |64                |units\n",
+      "0.01              |0.01              |learning_rate\n",
+      "\n",
+      "Epoch 1/10\n",
+      "186/186 - 4s - loss: 0.6487 - accuracy: 0.6247 - val_loss: 0.5937 - val_accuracy: 0.6837 - 4s/epoch - 19ms/step\n",
+      "Epoch 2/10\n",
+      "186/186 - 3s - loss: 0.5222 - accuracy: 0.7743 - val_loss: 0.4007 - val_accuracy: 0.8439 - 3s/epoch - 14ms/step\n",
+      "Epoch 3/10\n",
+      "186/186 - 3s - loss: 0.4820 - accuracy: 0.7827 - val_loss: 0.3838 - val_accuracy: 0.8287 - 3s/epoch - 15ms/step\n",
+      "Epoch 4/10\n",
+      "186/186 - 3s - loss: 0.4298 - accuracy: 0.8142 - val_loss: 0.3640 - val_accuracy: 0.8621 - 3s/epoch - 15ms/step\n",
+      "Epoch 5/10\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
-    "# Perform hyperparameter tuning\n",
-    "def build_hypermodel(hp):\n",
+    "%%time\n",
+    "# Define a function for model building for hyperparameter tuning\n",
+    "def build_is_cancerous_model(hp):\n",
     "    model = Sequential()\n",
-    "    model.add(Conv2D(filters=hp.Int('filters_1', min_value=16, max_value=128, step=16),\n",
-    "                     kernel_size=hp.Choice('kernel_size_1', values=[3, 5]),\n",
-    "                     activation='relu',\n",
-    "                     input_shape=(27, 27, 3)))\n",
-    "    model.add(MaxPooling2D(pool_size=(2, 2)))\n",
-    "    model.add(Conv2D(filters=hp.Int('filters_2', min_value=16, max_value=128, step=16),\n",
-    "                     kernel_size=hp.Choice('kernel_size_2', values=[3, 5]),\n",
-    "                     activation='relu'))\n",
-    "    model.add(MaxPooling2D(pool_size=(2, 2)))\n",
+    "    # Tune the number of units in the first Conv2D layer\n",
+    "    # Choose an optimal value between 32-128\n",
+    "    hp_units = hp.Int('units', min_value=32, max_value=128, step=32)\n",
+    "    model.add(Conv2D(hp_units, (3, 3), activation='relu', input_shape=INPUT_DIM))\n",
+    "    model.add(MaxPooling2D((2, 2)))\n",
+    "    model.add(Conv2D(64, (3, 3), activation='relu'))\n",
+    "    model.add(MaxPooling2D((2, 2)))\n",
+    "    model.add(Conv2D(128, (3, 3), activation='relu'))\n",
+    "    model.add(MaxPooling2D((2, 2)))\n",
     "    model.add(Flatten())\n",
-    "    model.add(Dense(units=hp.Int('units', min_value=32, max_value=128, step=16), activation='relu'))\n",
-    "    model.add(Dropout(rate=hp.Float('dropout_rate', min_value=0.0, max_value=0.5, step=0.1)))\n",
-    "    model.add(Dense(1, activation='sigmoid')) \n",
-    "    model.compile(optimizer=tf.keras.optimizers.Adam(hp.Float('learning_rate', min_value=1e-4, max_value=1e-2, sampling='LOG')),\n",
-    "                  loss='categorical_crossentropy',\n",
-    "                  metrics=['accuracy'])\n",
+    "    model.add(Dense(64, activation='relu'))\n",
+    "    model.add(Dropout(0.5))\n",
+    "    model.add(Dense(1, activation='sigmoid'))\n",
+    "\n",
+    "    # Tune the learning rate for the optimizer\n",
+    "    hp_learning_rate = hp.Choice('learning_rate', values=[1e-2, 1e-3, 1e-4])\n",
+    "    model.compile(optimizer=Adam(learning_rate=hp_learning_rate), loss='binary_crossentropy', metrics=['accuracy'])\n",
+    "\n",
     "    return model\n",
     "\n",
-    "# Perform hyperparameter tuning dense=2 for is_cancerous and dense=4 for cell_type\n",
-    "def build_hypermodel_dense_4(hp):\n",
-    "    model = Sequential()\n",
-    "    model.add(Conv2D(filters=hp.Int('filters_1', min_value=16, max_value=128, step=16),\n",
-    "                     kernel_size=hp.Choice('kernel_size_1', values=[3, 5]),\n",
-    "                     activation='relu',\n",
-    "                     input_shape=(27, 27, 3)))\n",
-    "    model.add(MaxPooling2D(pool_size=(2, 2)))\n",
-    "    model.add(Conv2D(filters=hp.Int('filters_2', min_value=16, max_value=128, step=16),\n",
-    "                     kernel_size=hp.Choice('kernel_size_2', values=[3, 5]),\n",
-    "                     activation='relu'))\n",
-    "    model.add(MaxPooling2D(pool_size=(2, 2)))\n",
-    "    model.add(Flatten())\n",
-    "    model.add(Dense(units=hp.Int('units', min_value=32, max_value=128, step=16), activation='relu'))\n",
-    "    model.add(Dropout(rate=hp.Float('dropout_rate', min_value=0.0, max_value=0.5, step=0.1)))\n",
-    "    model.add(Dense(4, activation='softmax'))  # Change this to 4 for cell type model\n",
-    "    model.compile(optimizer=tf.keras.optimizers.Adam(hp.Float('learning_rate', min_value=1e-4, max_value=1e-2, sampling='LOG')),\n",
-    "                  loss='binary_crossentropy',\n",
-    "                  metrics=['accuracy'])\n",
-    "    return model\n",
-    "\n",
+    "# Instantiate the tuner and perform hypertuning\n",
     "tuner = RandomSearch(\n",
-    "    build_hypermodel,\n",
+    "    build_is_cancerous_model,\n",
     "    objective='val_accuracy',\n",
-    "    max_trials=30,\n",
-    "    executions_per_trial=2,\n",
-    "    directory='tuning',\n",
-    "    project_name='is_cancerous_hyperparameter_tuning')  # Change this to cell_type_hyperparameter_tuning for the cell type model\n",
+    "    max_trials=5,  # number of different hyperparameter combinations to try\n",
+    "    executions_per_trial=3,  # number of trials per hyperparameter combination to reduce results variance\n",
+    "    directory='my_dir',\n",
+    "    project_name='cancerous_tuning')\n",
     "\n",
-    "tuner.search(data_gen.flow(train_images, train_is_cancerous_labels, batch_size=BATCH_SIZE),  # Change to train_cell_type_labels for the cell type model\n",
-    "             epochs=EPOCHS,\n",
-    "             validation_data=(val_images, val_is_cancerous_labels),  # Change to val_cell_type_labels for the cell type model\n",
-    "             verbose=2)\n",
+    "# Start the search for the best hyperparameters\n",
+    "tuner.search(data_gen.flow(train_images, train_is_cancerous_labels, batch_size=BATCH_SIZE),\n",
+    "             validation_data=(val_images, val_is_cancerous_labels),\n",
+    "             epochs=EPOCHS, verbose=2)\n",
     "\n",
     "# Get the optimal hyperparameters\n",
-    "best_hyperparameters = tuner.get_best_hyperparameters(num_trials=1)[0]\n",
+    "best_hps=tuner.get_best_hyperparameters(num_trials=1)[0]\n",
     "\n",
-    "# Build and train the model with the best hyperparameters\n",
-    "best_is_cancerous_model = tuner.hypermodel.build(best_hyperparameters)\n",
-    "best_is_cancerous_model.fit(data_gen.flow(train_images, train_is_cancerous_labels, batch_size=BATCH_SIZE),\n",
-    "                            validation_data=(val_images, val_is_cancerous_labels),\n",
-    "                            epochs=EPOCHS, verbose=2)\n",
+    "# Build the model with the optimal hyperparameters\n",
+    "is_cancerous_model = tuner.hypermodel.build(best_hps)\n",
     "\n",
-    "# Evaluate the optimized model on the validation set\n",
-    "val_is_cancerous_pred = np.argmax(best_is_cancerous_model.predict(val_images), axis=-1)\n",
-    "is_cancerous_metrics = calculate_metrics(val_is_cancerous_true, val_is_cancerous_pred)\n",
+    "# Same process can be repeated for the cell_type_model\n",
+    "def build_cell_type_model(hp):\n",
+    "    model = Sequential()\n",
+    "    # Tune the number of units in the first Conv2D layer\n",
+    "    # Choose an optimal value between 32-128\n",
+    "    hp_units = hp.Int('units', min_value=32, max_value=128, step=32)\n",
+    "    model.add(Conv2D(hp_units, (3, 3), activation='relu', input_shape=INPUT_DIM))\n",
+    "    model.add(MaxPooling2D((2, 2)))\n",
+    "    model.add(Conv2D(64, (3, 3), activation='relu'))\n",
+    "    model.add(MaxPooling2D((2, 2)))\n",
+    "    model.add(Conv2D(128, (3, 3), activation='relu'))\n",
+    "    model.add(MaxPooling2D((2, 2)))\n",
+    "    model.add(Flatten())\n",
+    "    model.add(Dense(64, activation='relu'))\n",
+    "    model.add(Dropout(0.5))\n",
+    "    model.add(Dense(NUM_CLASSES, activation='softmax'))\n",
     "\n",
-    "print(\"Optimized IsCancerous Model: Accuracy: {:.4f}, Precision: {:.4f}, Recall: {:.4f}, F1-score: {:.4f}\".format(*is_cancerous_metrics))\n",
+    "    # Tune the learning rate for the optimizer\n",
+    "    hp_learning_rate = hp.Choice('learning_rate', values=[1e-2, 1e-3, 1e-4])\n",
+    "    model.compile(optimizer=Adam(learning_rate=hp_learning_rate), loss='categorical_crossentropy', metrics=['accuracy'])\n",
     "\n",
-    "# Repeat the same process for the cell-type classification model\n",
+    "    return model\n",
+    "\n",
+    "# Instantiate the tuner and perform hypertuning\n",
     "tuner = RandomSearch(\n",
-    "    build_hypermodel_dense_4,\n",
+    "    build_cell_type_model,\n",
     "    objective='val_accuracy',\n",
-    "    max_trials=30,\n",
-    "    executions_per_trial=2,\n",
-    "    directory='tuning',\n",
-    "    project_name='cell_type_hyperparameter_tuning')\n",
+    "    max_trials=5,  # number of different hyperparameter combinations to try\n",
+    "    executions_per_trial=3,  # number of trials per hyperparameter combination to reduce results variance\n",
+    "    directory='my_dir',\n",
+    "    project_name='cell_type_tuning')\n",
     "\n",
+    "# Start the search for the best hyperparameters\n",
     "tuner.search(data_gen.flow(train_images, train_cell_type_labels, batch_size=BATCH_SIZE),\n",
-    "                epochs=EPOCHS,\n",
     "                validation_data=(val_images, val_cell_type_labels),\n",
-    "                verbose=2)\n",
-    "# Get the optimal hyperparameters\n",
-    "best_hyperparameters = tuner.get_best_hyperparameters(num_trials=1)[0]\n",
-    "# Build and train the model with the best hyperparameters\n",
-    "best_cell_type_model = tuner.hypermodel.build(best_hyperparameters)\n",
-    "best_cell_type_model.fit(data_gen.flow(train_images, train_cell_type_labels, batch_size=BATCH_SIZE),\n",
-    "                            validation_data=(val_images, val_cell_type_labels),\n",
-    "                            epochs=EPOCHS, verbose=2)\n",
-    "# Evaluate the optimized model on the validation set\n",
-    "val_cell_type_pred = np.argmax(best_cell_type_model.predict(val_images), axis=-1)\n",
-    "cell_type_metrics = calculate_metrics(val_cell_type_true, val_cell_type_pred)\n",
+    "                epochs=EPOCHS, verbose=2)\n",
     "\n",
-    "print(f'Optimized Cell Type Model: Accuracy: {cell_type_metrics[0]:.4f}, Precision: {cell_type_metrics[1]:.4f}, Recall: {cell_type_metrics[2]:.4f}, F1-score: {cell_type_metrics[3]:.4f}')\n"
+    "# Get the optimal hyperparameters\n",
+    "best_hps=tuner.get_best_hyperparameters(num_trials=1)[0]\n",
+    "\n",
+    "# Build the model with the optimal hyperparameters\n",
+    "cell_type_model = tuner.hypermodel.build(best_hps)\n",
+    "\n",
+    "# train the models\n",
+    "is_cancerous_history = is_cancerous_model.fit(data_gen.flow(train_images, train_is_cancerous_labels, batch_size=BATCH_SIZE),\n",
+    "                                                validation_data=(val_images, val_is_cancerous_labels),\n",
+    "                                                epochs=EPOCHS, verbose=2)\n",
+    "\n",
+    "cell_type_history = cell_type_model.fit(data_gen.flow(train_images, train_cell_type_labels, batch_size=BATCH_SIZE),\n",
+    "                                            validation_data=(val_images, val_cell_type_labels),\n",
+    "                                            epochs=EPOCHS, verbose=2)\n",
+    "\n",
+    "# evaluate the models using the test set\n",
+    "is_cancerous_loss, is_cancerous_acc = is_cancerous_model.evaluate(test_images, test_is_cancerous_labels, verbose=2)\n",
+    "cell_type_loss, cell_type_acc = cell_type_model.evaluate(test_images, test_cell_type_labels, verbose=2)\n",
+    "\n",
+    "print(f'Convolutional Neural Network after hyperparameter tuning model accuracy for is_cancerous prediction: {is_cancerous_acc}')\n",
+    "print(f'Convolutional Neural Network after hyperparameter tuning model accuracy for cell_type prediction: {cell_type_acc}')\n",
+    "print(f'Convolutional Neural Network after hyperparameter tuning model loss for is_cancerous prediction: {is_cancerous_loss}')\n",
+    "print(f'Convolutional Neural Network after hyperparameter tuning model loss for cell_type prediction: {cell_type_loss}')\n",
+    "\n",
+    "# plot learning curves\n",
+    "plot_learning_curve(is_cancerous_history, 'is_cancerous_CNN_hyperparameter_tuning_model')\n",
+    "plot_learning_curve(cell_type_history, 'cell_type_CNN_hyperparameter_tuning_model')\n",
+    "\n",
+    "# get predictions\n",
+    "is_cancerous_predictions = is_cancerous_model.predict(test_images)\n",
+    "# convert predictions to binary\n",
+    "is_cancerous_predictions = np.where(is_cancerous_predictions > 0.5, 1, 0)\n",
+    "cell_type_predictions = cell_type_model.predict(test_images)\n",
+    "# convert cell_type predictions to one-hot encoding\n",
+    "cell_type_predictions = np.argmax(cell_type_predictions, axis=1)\n",
+    "\n",
+    "# get the confusion matrices\n",
+    "plot_confusion_matrix(test_is_cancerous_labels, is_cancerous_predictions, 'is_cancerous_CNN_hyperparameter_tuning_model')\n",
+    "plot_confusion_matrix(test_cell_type_labels, cell_type_predictions, 'cell_type_CNN_hyperparameter_tuning_model')\n",
+    "\n",
+    "# get the classification reports\n",
+    "print(f'Classification report for is_cancerous prediction:\\n{classification_report(test_is_cancerous_labels, is_cancerous_predictions)}')\n",
+    "print(f'Classification report for cell_type prediction:\\n{classification_report(test_cell_type_labels, cell_type_predictions)}')\n",
+    "\n",
+    "cnn_hyperparameter_tuning_model_df = evaluate_and_report(test_is_cancerous_labels, is_cancerous_predictions, test_cell_type_labels, cell_type_predictions, is_cancerous_model, cell_type_model, 'is_cancerous_CNN_hyperparameter_tuning_model', 'cell_type_CNN_hyperparameter_tuning_model', 'CNN_hyperparameter_tuning_model')\n",
+    "# concatenate the cnn_hyperparameter_tuning_model_df to the evaluate_and_report_df\n",
+    "evaluate_and_report = pd.concat([evaluate_and_report, cnn_hyperparameter_tuning_model_df], ignore_index=True)\n",
+    "evaluate_and_report"
    ]
   },
   {
@@ -2452,7 +2514,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Deep Learning"
+    "# Deep Learning\n",
+    "\n",
+    "The architecture of the proposed Deep Learning model is designed to handle complex data patterns. Motivations behind choosing this architecture:\n",
+    "\n",
+    "+ Multi-Layer Design: The model is a multi-layer perceptron (MLP) with three hidden layers. This design allows the model to learn complex patterns and relationships in the data. With only one layer, the model can only learn linear relationships. However, with multiple layers, the model can learn non-linear relationships often present in complex data like images.\n",
+    "+ Number of Neurons: The model starts with a larger number of neurons in the first layer (512) and gradually reduces the number of neurons in subsequent layers (256 and 128). This design is often referred to as a \"funnel\" structure. It is based on the assumption that the model should learn a large number of low-level features in the early layers and then combine these into a smaller number of high-level features in the deeper layers.\n",
+    "+ Relu Activation Function: The Rectified Linear Unit (ReLU) activation function is used in the hidden layers. ReLU is popular because it helps mitigate the vanishing gradients problem, which can hinder learning in deep neural networks.\n",
+    "+ Dropout Layers: Dropout layers are included after each Dense layer. Dropout is a regularization technique that helps prevent overfitting. During training, it randomly sets a fraction of the input units to 0, which helps prevent over-dependence on any single neuron and makes the model more robust.\n",
+    "+ Sigmoid and Softmax Activation Functions: In the output layer, a sigmoid activation function is used for the binary classification task (is_cancerous), and a softmax activation function is used for the multi-class classification task (cell_type). These activation functions are suitable for these types of classification tasks because they produce a probability distribution over the classes.\n",
+    "+ Adam Optimizer: The model uses the Adam optimizer, an adaptive learning rate optimization algorithm. It is popular because it requires little memory, is computationally efficient, and works well with problems that have large data or parameters."
    ]
   },
   {
